Sun Feb  8 21:39:06 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/open-uri.rb: add :read_timeout option.
	  [ruby-core:4848] (r9166)

Mon Feb  9 01:21:16 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (unix_recv_io): relax msg_controllen error
	  check for x86_64-openbsd4.4.

Thu Feb  5 21:01:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (darwin): get rid of strange settings issue of
	  apple gcc port, which searches /usr/local/include always but
	  /usr/local/lib not.

	* ext/readline/readline.c (Init_readline): suppress warnings with
	  libedit.

Tue Feb  3 18:35:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread/thread.c (rb_queue_pop, rb_queue_push): should not lock
	  mutex if got an exception while waiting, and should ensure unlocked
	  after signaled.  [ruby-dev:37545]

Tue Feb  3 12:27:19 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (match_check): check if MatchData is initialized.
	  [ruby-core:18749]

Tue Feb  3 11:40:05 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/rexml/rexml.rb: incremented Ruby::VERSION.  Thanks, Jeremy
	  Kemper.  [ruby-core:20113]

Mon Feb  2 20:49:24 2009  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c: Introduce id_each to save rb_intern() and SYM2ID()
	  calls.

Sun Feb  1 16:14:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (Switch#summarize): strips an equal sign from
	  short option, and fills right sides in shorter lines.
	  [ruby-talk:326414]

Sat Jan 31 16:04:38 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (io_getpartial): fflush after read for updating pos in FILE.
	  not portable, I guess.  [ruby-core:21561]

Fri Jan 30 15:41:51 2009  Akinori MUSHA  <knu@iDaemons.org>

	* proc.c (Init_Proc): add '===' operator to use procs in when
	  clause of the case statement.  inspired by <http://www.aimred.com/news/developers/2008/08/14/unlocking_the_power_of_case_equality_proc/>.

Thu Jan 29 12:18:54 2009  Technorama Ltd.  <oss-ruby@technorama.net>
